FINALLY fixed the styling issue, with code being overwritten in the css for the queries. All styling now works, tablet page finished for the home page =D

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -74,6 +74,9 @@ aside ul {
         }
     }
 }
+.tablet-hero-image {
+    display: none;
+}
 
 // Grid Section ------------------------------------------------------------------------------------------------
 
@@ -567,3 +570,8 @@ article {
     }
 }
 
+// MEDIA QUERIES -----------------------------------------
+
+
+
+@import 'queries';
