--- a/styles/sass/_queries.scss
+++ b/styles/sass/_queries.scss
@@ -1,17 +1,3 @@
-$pine: rgb(52, 82, 49);
-$accent: rgb(228, 164, 54);
-$green-gray: rgb(112, 155, 107);
-$black: rgb(31, 31, 31);
-$white-shade: rgb(246, 246, 246);
-$header: 'Abril Fatface',
-'cursive';
-$menu: 'Montserrat',
-'sans-serif';
-$button-text: 'Abril Fatface',
-'cursive';
-$body-text: 'Montserrat',
-'sans-serif';
-
 @media (max-width: 1196px) {
     .title h1 {
         font-size: 5rem;
@@ -25,10 +11,12 @@ $body-text: 'Montserrat',
                 right: 1%;
                 bottom: 2%;
             }
+
             .image-box2 {
                 left: 1%;
                 top: 2%;
             }
+
             .text-box1,
             .text-box2 {
                 p {
@@ -36,11 +24,13 @@ $body-text: 'Montserrat',
                 }
             }
         }
+
         .bottom-layer {
             .green-box1 {
                 bottom: 4%;
                 height: 325px;
             }
+
             .green-box2 {
                 top: 4%;
                 height: 325px;
@@ -50,35 +40,38 @@ $body-text: 'Montserrat',
 }
 
 @media (max-width: 1030px) {
-        .about {
-            .top-layer {
-                padding: 10vh 0;
+    .about {
+        .top-layer {
+            padding: 10vh 0;
+            display: flex;
+            flex-wrap: wrap;
+
+            .grid-box {
+                width: calc(100% / 2);
                 display: flex;
-                flex-wrap: wrap;
-                .grid-box {
-                    width: calc(100% / 2);
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    text-align: center;
-                }
-                .image-box1 {
-                    position: static;
-                }
-
-                .image-box2 {
-                    position: static;
-                }
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
             }
 
-            .bottom-layer {
-                display: none;
+            .image-box1 {
+                position: static;
+            }
+
+            .image-box2 {
+                position: static;
             }
         }
-        .blog {
-            margin-top: 10%;
+
+        .bottom-layer {
+            display: none;
         }
+    }
+
+    .blog {
+        margin-top: 10%;
+    }
 }
 
 @media (max-width: 930px) {
@@ -86,9 +79,11 @@ $body-text: 'Montserrat',
         display: block;
 
     }
+
     .title h1 {
         font-size: 4rem;
     }
+
     .title-image {
         min-width: 280px;
     }
@@ -99,57 +94,114 @@ $body-text: 'Montserrat',
 
     .about {
         display: none;
-        }   
     }
-    
-    @media (max-width: 930px) {
-        .hidden-gallery {
+}
 
-            display: flex !important;
-            flex-direction: column;
-            align-items: center;
-            background-color: white;
-            .grid-box {
-                width: 80%;
-                text-align: center;
-                margin: 4% auto;
-            }
-            .image-box1,
-            .image-box2 {
-                position: static;
-                img {
-                    width: 100%;
-                }
-            }
+@media (max-width: 930px) {
+    .hidden-gallery {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        padding: 5% 0;
+        .grid-box {
+            width: 80%;
+            text-align: center;
+            margin: 4% auto;
         }
-        h2 {
-            font-size: 1.25rem;
-            font-family: $header;
-            text-transform: uppercase;
-        }
-        .blog .blog-article h2 {
-            font-size: 1.25rem;
-            font-family: $header;
-            text-transform: uppercase;
+
+        .image-box1,
+        .image-box2 {
+            position: static;
+
+            img {
+                width: 100%;
+            }
         }
     }
+
+    h2 {
+        font-size: 1.25rem;
+        font-family: $header;
+        text-transform: uppercase;
+    }
+
+    .blog .blog-article h2 {
+        font-size: 1.25rem;
+        font-family: $header;
+        text-transform: uppercase;
+
+    }
+
+    .home h2 {
+        font-size: 1.25rem;
+    }
+
+    .blog {
+        height: auto;
+    }
+
+    .blog-article {
+        text-align: center;
+
+        p {
+            line-height: normal;
+        }
+
+        button {
+            margin-bottom: 10%;
+        }
+    }
+}
+
+
+@media (max-width: 880px) {
+    .contact {
+        p {
+            display: none;
+        }
+    }
+}
 
 
 @media (max-width: 750px) {
+    .home {
+        height: auto;
+        padding-bottom: 10%;
+    }
     .landing {
-        height: 100%;
+        height: auto;
+
         .title {
             height: 100%;
             margin: auto auto;
         }
     }
+
+    .tablet-hero-image {
+        display: block;
+        width: 50%;
+        margin: 10% auto;
+        img {
+            width: 100%;
+        }
+    }
+
     .landing-flex-box {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
         .title-image-card {
             display: none;
         }
+    }
+    .blog-image-card {
+        display: none;
+    }
+    .blog .blog-article {
+        width: 100%;
     }
 }
