--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -421,180 +421,6 @@ nav ul li a {
   left: 10%;
 }
 
-@media (max-width: 1196px) {
-  .title h1 {
-    font-size: 5rem;
-  }
-}
-@media (max-width: 1130px) {
-  .about .top-layer .image-box1 {
-    right: 1%;
-    bottom: 2%;
-  }
-  .about .top-layer .image-box2 {
-    left: 1%;
-    top: 2%;
-  }
-  .about .top-layer .text-box1 p,
-.about .top-layer .text-box2 p {
-    line-height: normal;
-  }
-  .about .bottom-layer .green-box1 {
-    bottom: 4%;
-    height: 325px;
-  }
-  .about .bottom-layer .green-box2 {
-    top: 4%;
-    height: 325px;
-  }
-}
-@media (max-width: 1030px) {
-  .about .top-layer {
-    padding: 10vh 0;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .about .top-layer .grid-box {
-    width: calc(100% / 2);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .about .top-layer .image-box1 {
-    position: static;
-  }
-  .about .top-layer .image-box2 {
-    position: static;
-  }
-  .about .bottom-layer {
-    display: none;
-  }
-
-  .blog {
-    margin-top: 10%;
-  }
-}
-@media (max-width: 930px) {
-  .hidden-gallery {
-    display: block;
-  }
-
-  .title h1 {
-    font-size: 4rem;
-  }
-
-  .title-image {
-    min-width: 280px;
-  }
-
-  .title-card {
-    min-width: 280px;
-  }
-
-  .about {
-    display: none;
-  }
-}
-@media (max-width: 930px) {
-  .hidden-gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    padding: 5% 0;
-  }
-  .hidden-gallery .grid-box {
-    width: 80%;
-    text-align: center;
-    margin: 4% auto;
-  }
-  .hidden-gallery .image-box1,
-.hidden-gallery .image-box2 {
-    position: static;
-  }
-  .hidden-gallery .image-box1 img,
-.hidden-gallery .image-box2 img {
-    width: 100%;
-  }
-
-  h2 {
-    font-size: 1.25rem;
-    font-family: "Abril Fatface", "cursive";
-    text-transform: uppercase;
-  }
-
-  .blog .blog-article h2 {
-    font-size: 1.25rem;
-    font-family: "Abril Fatface", "cursive";
-    text-transform: uppercase;
-  }
-
-  .home h2 {
-    font-size: 1.25rem;
-  }
-
-  .blog {
-    height: auto;
-  }
-
-  .blog-article {
-    text-align: center;
-  }
-  .blog-article p {
-    line-height: normal;
-  }
-  .blog-article button {
-    margin-bottom: 10%;
-  }
-}
-@media (max-width: 880px) {
-  .contact p {
-    display: none;
-  }
-}
-@media (max-width: 750px) {
-  .home {
-    height: auto;
-    padding-bottom: 10%;
-  }
-
-  .landing {
-    height: auto;
-  }
-  .landing .title {
-    height: 100%;
-    margin: auto auto;
-  }
-
-  .tablet-hero-image {
-    display: block;
-    width: 50%;
-    margin: 10% auto;
-  }
-  .tablet-hero-image img {
-    width: 100%;
-  }
-
-  .landing-flex-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .landing-flex-box .title-image-card {
-    display: none;
-  }
-
-  .blog-image-card {
-    display: none;
-  }
-
-  .blog .blog-article {
-    width: 100%;
-  }
-}
 html {
   font-size: 125%;
 }
@@ -1140,6 +966,7 @@ article {
 @media (max-width: 1196px) {
   .title h1 {
     font-size: 5rem;
+    color: hotpink;
   }
 }
 @media (max-width: 1130px) {
@@ -1309,5 +1136,15 @@ article {
 
   .blog .blog-article {
     width: 100%;
+  }
+}
+@media (max-width: 570px) {
+  footer {
+    color: hotpink;
+  }
+}
+@media (max-width: 570px) {
+  footer {
+    display: none !important;
   }
 }/*# sourceMappingURL=style.css.map */
