--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -52,9 +52,10 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    .fa-bars {
+        display: none;
+    }
 }
-
-
 
 ul {
     list-style: none;
