--- a/styles/style.css
+++ b/styles/style.css
@@ -1312,6 +1312,16 @@ article {
     width: 50%;
     margin: 0 auto;
   }
+
+  .contactPage aside {
+    width: 100%;
+  }
+  .contactPage .aside-box {
+    margin: 10% auto;
+  }
+  .contactPage .form-box {
+    width: 100%;
+  }
 }
 @media (max-width: 880px) {
   .contact p {
@@ -1428,6 +1438,25 @@ article {
     width: 100%;
     margin-top: 5%;
   }
+
+  nav {
+    height: 5vh;
+  }
+  nav .fa-bars {
+    font-size: 1.5rem;
+  }
+
+  .header-banner {
+    height: 20vh;
+  }
+  .header-banner h1 {
+    font-size: 2rem;
+    top: 10px;
+  }
+
+  .contact-email {
+    font-size: 1rem;
+  }
 }
 @media (max-width: 486px) {
   .contact {
@@ -1474,6 +1503,12 @@ article {
 
   nav .fa-bars {
     font-size: 1.5rem;
+  }
+}
+@media (max-width: 320px) {
+  .header-banner .contact-header {
+    font-size: 1.5rem;
+    top: 8px;
   }
 }
 @media (max-width: 486px) {
