Theoretically, all the code should be the same as the last commit. Changed a style, then changed it back.

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'footer';
 @import 'contact-page';
 @import 'blog-page';
+@import 'queries';
 
 
 // html {
@@ -589,7 +590,7 @@
 
 
 
-@import 'queries';
+// @import 'queries';
 
 
 
