--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -13,586 +13,7 @@
 @import 'blog-page';
 @import 'queries';
 
-
-// html {
-//     font-size: 125%;
-// }
-
-// button {
-//     padding: 10px 15px;
-//     font-size: 1rem;
-// }
-
-// .wrapper {
-//     max-width: 1200px;
-//     width: 85%;
-//     margin: 0 auto;
-// }
-
-// body {
-//     background-color: $white-shade;
-// }
-
-// aside ul {
-//     display: flex;
-
-// }
-
-// .contactPage {
-//     display: flex;
-// }
-
-// .hidden-gallery {
-//     display: none;
-// }
-// HOME SECTION -----------------------------------------------------------------------------
-
-// .home {
-//     height: 60vh;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     text-align: center;
-//     background: $white-shade;
-//     h2 {
-//         font-family: $header;
-//         font-size: 2rem;
-//         letter-spacing: 1px;
-//         text-transform: uppercase;
-//         margin: 0;
-//     }
-//     p {
-//         width: 85%;
-//         margin: 0 auto;
-//         padding: 2.5% 0;
-//         font-family: $body-text;
-//         font-size: 1rem;
-//         line-height: 1.5;
-//     }
-//     button {
-//         font-family: $button-text;
-//         width: 200px;
-//         margin: 0 auto;
-//         padding: 5px 0;
-//         line-height: 32px;
-//         letter-spacing: 1px;
-//         background: $accent;
-//         transition: transform 0.2s ease-in-out;
-//         &:hover,
-//         &:focus {
-//             transform: scale(1.1);
-//         }
-//     }
-// }
-// .tablet-hero-image {
-//     display: none;
-// }
-
-// Grid Section ------------------------------------------------------------------------------------------------
-
-
-// .about {
-//     position: relative;
-//     height: 100vh;
-//     background-color: white;
-// }
-
-// .top-layer {
-//     height: 100vh;
-//     position: relative;
-//     display: flex;
-//     justify-content: center;
-//     flex-wrap: wrap;
-//     z-index: 10;
-//     .text-box1,
-//     .text-box2 {
-//         display: flex;
-//         flex-direction: column;
-//         button {
-//             width: 180px;
-//             background: $accent;
-//             padding: 10px 15px;
-//             font-family: $button-text;
-//         }
-//         h2 {
-//             font-family: $header;
-//             text-transform: uppercase;
-//         }
-//         p {
-//             font-family: $body-text;
-//         }
-//     }
-//     .text-box1 {
-//         justify-content: flex-end;
-//         padding-left: 8%;
-//         padding-bottom: 3%;
-//     }
-//     .text-box2 {
-//         text-align: end;
-//         padding-right: 8%;
-//         padding-top: 2.5%;
-//     }
-//     .grid-box {
-//         img {
-//             width: 100%;
-//             transition: transform 0.2s ease-in;
-//             &:hover,
-//             &:focus {
-//                 transform: scale(1.05);
-//             }
-//         }
-//     }
-// }
-
-// .bottom-layer {
-//     display: flex;
-//     flex-wrap: wrap;
-//     position: absolute;
-//     top: 3%;
-//     right: 0;
-//     bottom: 0;
-//     left: 0;
-//     z-index: 0;
-//     .green-box1 {
-//         background: $green-gray;
-//     }
-//     .green-box2 {
-//         background: $pine;
-//     }
-//     .white-box1,
-//     .white-box2 {
-//         background: white;
-//     }
-//     .white-box2 {
-//         top: 5%;
-//     }
-// }
-
-// .grid-box {
-//     width: calc(100% / 2);
-// }
-
-// .green-box1,
-// .image-box1 {
-//     position: relative;
-//     bottom: 6%;
-// }
-
-// .green-box2,
-// .image-box2 {
-//     position: relative;
-//     top: 3%;
-// }
-
-// .image-box2 {
-//     img {
-//         position: relative;
-//         bottom: 1.8%;
-//         right: 3%;
-//     }
-// }
-
-// .image-box1 {
-//     right: 2%;
-//     bottom: 5%;
-// }
-
-
-// BLOG SECTION --------------------------------------------------------
-
-// .blog {
-//     height: 55vh;
-//     display: flex;
-//     align-items: center;
-//     .blog-image-card {
-//         position: relative;
-//         width: 23%;
-//         margin-right: 10%;
-//         .blog-image {
-//             width: 100%;
-//             position: relative;
-//             z-index: 10;
-//             img {
-//                 width: 100%;
-//                 position: relative;
-//                 right: 15px;
-//                 bottom: 10px;
-//             }
-//         }
-//         .blog-card {
-//             background: $green-gray;
-//             position: absolute;
-//             top: 0;
-//             right: 0;
-//             bottom: 0;
-//             left: 0;
-//         }
-//     }
-//     .blog-article {
-//         width: 60%;
-//         h2 {
-//             font-family: $header;
-//             text-transform: uppercase;
-//             letter-spacing: 1px;
-//             font-size: 1.8rem;
-//         }
-//     }
-// }
-
-// BANNER SECTION --------------------------------------------------------
-
-// .banner {
-//     height: 55vh;
-//     background: url('./assets/home-image-5.jpg');
-//     background-position: center;
-//     background-size: cover;
-
-// }
-
-// INSTA STRIP SECTION ----------------------------------------------------------------------
-
-// .insta {
-//     background: white;
-// }
-
-// .insta-wall {
-//     display: flex;
-//     justify-content: center;
-//     padding: 4% 0;
-//     div {
-//         padding: 2%;
-//         width: calc(100% / 3);
-//         img {
-//             width: 100%;
-//         }
-//     }
-// }
-
-// CONTACT SECTION --------------------------------------------------------------------------------------------------
-
-// .contact {
-//     background: $white-shade;
-//     display: flex;
-//     flex-wrap: wrap;
-//     padding: 5% 0;
-//     .contact-box {
-//         width: calc(100% / 2);
-//         padding: 2%;
-//         h2 {
-//             font-family: $header;
-//             text-transform: uppercase;
-//             letter-spacing: 1px;
-//         }
-//         p {
-//             width: 90%;
-//             font-family: $body-text;
-//         }
-//     }
-//     .contact-box1,
-//     .contact-box2,
-//     .contact-b0x3,
-//     .contact-box4 {
-//         h2 {
-//             transition: transform 0.2s ease-out;
-//             &:hover,
-//             &:focus {
-//                 transform: scale(1.1);
-//             }
-//             span {
-//                 display: inline-block;
-//                 position: relative;
-//                 right: 5%;
-//                 div {
-//                     display: flex;  
-//                     justify-content: center;
-//                     align-items: center;
-//                     width: 50px;
-//                     height: 50px;
-//                     border-radius: 50%;
-//                     background-color: $accent;
-//                     .fas {
-//                         font-size: 1rem;
-//                     }
-//                 }
-//             }
-//         }
-//         p {
-//             padding-left: 8.8%;
-//         }
-//     }
-// }
-
-// FOOTER SECTION --------------------------------------------------------------------------------------------------
-
-// footer {
-//     height: 5vh;
-//     background: $black;
-//     color: $white-shade;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
-
-// CONTACT PAGE ------------------------------------------------------------------------------------
-
-// .contactPage {
-//     main {
-//         display: flex;
-//         aside {
-//             width: 50%;
-            
-//             ul {
-//                 li {
-//                     .fab {
-//                         font-size: 2rem;
-//                     }
-//                 }
-//             }
-//         }
-//         form {
-//             width: 55%;
-//             background-color: white;
-//         }
-//         // input[type=""]
-//     } 
-
-//     .contactPage {
-//         aside {
-//             display: flex;
-//             flex-direction:column;
-//             justify-content: center;
-//         }
-//     }
-// }
-
-// ul.icons {
-//     display: flex;
-//     li {
-//         margin-right: 10%;
-//         i.fab {
-//             font-size: 1.5rem;
-//             color: $pine;
-            
-//         }
-//     }
-// }
-
-// .aside-box {
-//     background-color: white;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     // width: 45%;
-//     padding: 10%;
-//     margin-right: 8%;
-//     h3 {
-//         margin: 5% 0;
-//     }
-//     p {
-//         margin: 0;
-//         padding: 0;
-//     }
-// }
-
-// aside {
-//     width: 35%;
-// }
-
-// .form-box {
-//     width: 65%;
-//     display: flex;
-//     flex-wrap: wrap;
-//     input[tyoe="text"] {
-//         margin-right: 5px;
-//     }
-//     input[type="email"],
-//     input[type="text"] {
-//         width: calc((100% / 2) - 5px);
-//         padding: 3%;
-//         border: none;
-//         padding-left: 5%;
-//     }
-//     textarea {
-//         resize: none;
-//         width: 100%;
-//         border: none;
-//         margin: 3% 0;
-//         padding: 5% 0 0 5%;
-//     }
-//     button {
-//         width: 100%;
-//         font-family: $button-text;
-//         font-weight: 600;
-//     }
-// }
-
-// .contact-footer {
-//     margin-top: 7%;
-// }
-
-// BLOG PAGE --------------------------------------------------------------------------------------------------------
-
-// .blog-page {
-//     background-color: $white-shade;
-// }
-
-// main {
-//     display: flex;
-// }
-
-// .aside-bio {
-//     background-color: white;
-//     margin: 0 auto;
-//     padding: 8%;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     .bio-image {
-//         margin-top: 5%;
-//         img {
-//             width: 100%;
-//         }
-//     }
-//     .bio {
-//         h3 {
-//             font-family: $header;
-//             text-transform: uppercase;
-//             margin-top: 8%;
-//         }
-//         p {
-//             font-family: $body-text;
-//             font-size: 1rem;
-//             letter-spacing: 1px;
-//             line-height: 32px;
-//         }
-//         span {
-//             a {
-//                 color: $green-gray;
-//                 text-decoration: none;
-//                 font-weight: 700;
-                
-//                 &:hover,
-//                 &:focus {
-//                     text-decoration: underline;
-//                 }
-//             }
-//         }
-
-//     }
-// }
-
-// .aside-recent {
-//     background-color: white;
-//     margin-top: 5%;
-//     padding: 8%;
-//     h3 {
-//         font-family: $header;
-//         text-transform: uppercase;
-//         letter-spacing: 1px;
-        
-//     }
-//     ul {
-//         margin-top: 7%;
-//         list-style:inside;
-//         font-size: 1rem;
-//         font-weight: 400;
-//         flex-direction: column;
-//         text-transform:capitalize;
-//         li {
-//             letter-spacing: 0;
-//             padding: 2% 0 2% 4%;
-//             &::marker {
-//                 font-size: 0.7rem;
-//             }
-//         }
-//     }
-// }
-
-// article {
-//     background-color: white;
-//     padding: 8%;
-//     border-bottom: 5px solid $green-gray;
-// }
-
-// .blog-page aside {
-//     width: 100%;
-// }
-
-// .blog-page .flex-child2 {
-//     width: 160%;
-// }
-
-// .readerComments {
-//         margin-top: 5%;
-
-// }
-
-// .comment1,
-// .comment2 {
-//     display: flex;
-//     justify-content: center;
-//     background-color: white;
-//     margin-bottom: 5%;
-//     font-family: $body-text;
-//     .readerPic {
-//         margin-top: 20px;
-//         img {
-//             width: 100%;
-//         }
-//     }
-//     .readerCommentBox {
-//         width: 80%;
-//         padding: 5%;
-//         p {
-//             margin: 0;
-//             padding: 0;
-//         }
-//     }
-// }
-
-// .comment2 {
-//     border-bottom: 5px solid $green-gray;
-// }
-// .comment-form {
-//     button {
-//         width: 100%;
-//     }
-// }
-// .comment-form {
-//     width: 50%;
-//     margin: 5% auto;
-//     border: 1px solid red;
-
-//     form {
-//         display: flex;
-//         width: 100%;
-//     }
-// }
-
-// .form-box {
-//     width: 85%;
-//     margin: 0 auto;
-//     form {
-//         width: 100%; 
-//     }
-// }
-
-// #contact {
-//     h2 {
-//         a {
-//             text-decoration: none;
-//             color: black;
-//         }
-//     }
-// }
-// MEDIA QUERIES -----------------------------------------
-
-
-
-// @import 'queries';
-
-
+// One line of style code that I couldn't stop from being overwritten in the css
 
 @media (max-width: 486px) {
     .readerComments {
