The contact page form now returns a message to the user including their name upon form submission

--- a/styles/style.css
+++ b/styles/style.css
@@ -973,6 +973,14 @@ aside {
   margin-top: 7%;
 }
 
+.userThank {
+  width: 100%;
+  text-align: center;
+  font-family: cursive;
+  color: #e4a436;
+  font-size: 1.5rem;
+}
+
 .blog-page {
   background-color: #f6f6f6;
 }
