--- a/styles/sass/_contact-page.scss
+++ b/styles/sass/_contact-page.scss
@@ -103,3 +103,11 @@ aside {
 .contact-footer {
     margin-top: 7%;
 }
+
+.userThank {
+    width: 100%;
+    text-align: center;
+    font-family: cursive;
+    color: $accent;
+    font-size: 1.5rem;
+}
